--- a/SSWEProject/BabylonEditor/index.html
+++ b/SSWEProject/BabylonEditor/index.html
@@ -1,7 +1,7 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Babylon - Basic scene</title>
+    <title>Babylon.js Editor</title>
 
     <style>
         html, body {
